# third_party_harfbuzz

./: BUILD.gn  COPYRIGHT.OpenSource  CVE-2026-22693.patch  OAT.xml  README.OpenSource  backport-0001-CVE-2023-25193.patch  backport-0002-CVE-2023-25193.patch  backport-CVE-2022-33068.patch  backport-harfbuzz-disallow-during-callback.patch  bundle.json  harfbuzz.spec  harfbuzz.yaml  huawei_harfbuzz.patch  install.py
src/: hb-buffer.h  hb-open-type.hh  hb-ot-color-sbix-table.hh  hb-ot-layout-common.hh  hb-ot-layout-gsubgpos.hh  hb-static.cc
