# Copyright (c) Huawei Technologies Co., Ltd. 2020. All rights reserved.

import("//build/lite/config/component/lite_component.gni")

config("harfbuzz_config") {
  include_dirs = [ "//third_party/harfbuzz/src" ]
}

harfbuzz_source = [
  "//third_party/harfbuzz/src/hb-aat-layout.cc",
  "//third_party/harfbuzz/src/hb-aat-map.cc",
  "//third_party/harfbuzz/src/hb-blob.cc",
  "//third_party/harfbuzz/src/hb-buffer-serialize.cc",
  "//third_party/harfbuzz/src/hb-buffer.cc",
  "//third_party/harfbuzz/src/hb-common.cc",
  "//third_party/harfbuzz/src/hb-face.cc",
  "//third_party/harfbuzz/src/hb-fallback-shape.cc",
  "//third_party/harfbuzz/src/hb-font.cc",
  "//third_party/harfbuzz/src/hb-map.cc",
  "//third_party/harfbuzz/src/hb-ot-cff1-table.cc",
  "//third_party/harfbuzz/src/hb-ot-cff2-table.cc",
  "//third_party/harfbuzz/src/hb-ot-face.cc",
  "//third_party/harfbuzz/src/hb-ot-font.cc",
  "//third_party/harfbuzz/src/hb-ot-layout.cc",
  "//third_party/harfbuzz/src/hb-ot-map.cc",
  "//third_party/harfbuzz/src/hb-ot-math.cc",
  "//third_party/harfbuzz/src/hb-ot-meta.cc",
  "//third_party/harfbuzz/src/hb-ot-metrics.cc",
  "//third_party/harfbuzz/src/hb-ot-name.cc",
  "//third_party/harfbuzz/src/hb-ot-shape-complex-arabic.cc",
  "//third_party/harfbuzz/src/hb-ot-shape-complex-default.cc",
  "//third_party/harfbuzz/src/hb-ot-shape-complex-hangul.cc",
  "//third_party/harfbuzz/src/hb-ot-shape-complex-hebrew.cc",
  "//third_party/harfbuzz/src/hb-ot-shape-complex-indic-table.cc",
  "//third_party/harfbuzz/src/hb-ot-shape-complex-indic.cc",
  "//third_party/harfbuzz/src/hb-ot-shape-complex-khmer.cc",
  "//third_party/harfbuzz/src/hb-ot-shape-complex-myanmar.cc",
  "//third_party/harfbuzz/src/hb-ot-shape-complex-thai.cc",
  "//third_party/harfbuzz/src/hb-ot-shape-complex-use-table.cc",
  "//third_party/harfbuzz/src/hb-ot-shape-complex-use.cc",
  "//third_party/harfbuzz/src/hb-ot-shape-complex-vowel-constraints.cc",
  "//third_party/harfbuzz/src/hb-ot-shape-fallback.cc",
  "//third_party/harfbuzz/src/hb-ot-shape-normalize.cc",
  "//third_party/harfbuzz/src/hb-ot-shape.cc",
  "//third_party/harfbuzz/src/hb-ot-tag.cc",
  "//third_party/harfbuzz/src/hb-ot-var.cc",
  "//third_party/harfbuzz/src/hb-set.cc",
  "//third_party/harfbuzz/src/hb-shape-plan.cc",
  "//third_party/harfbuzz/src/hb-shape.cc",
  "//third_party/harfbuzz/src/hb-shaper.cc",
  "//third_party/harfbuzz/src/hb-static.cc",
  "//third_party/harfbuzz/src/hb-subset-cff2.cc",
  "//third_party/harfbuzz/src/hb-subset-cff-common.cc",
  "//third_party/harfbuzz/src/hb-ucd.cc",
  "//third_party/harfbuzz/src/hb-unicode.cc",
]

lite_library("harfbuzz") {
  target_type = "shared_library"
  sources = harfbuzz_source

  public_configs = [ ":harfbuzz_config" ]
}
